[package]
name = "mojaloop-api"
version = "0.1.0"
authors = ["msk- <mattkingston@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# fspiox-api = { path = "/home/msk/projects/github.com/msk-/fspiox-api/" }
fspiox-api = { git = "https://github.com/partiallyordered/fspiox-api", rev = "73f6e2d84f2f225bf5842d698c59244465a29980" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
derive_more = "0.99"
serde_with = { version = "1.9", features = ["json"] }
strum = "0.21"
strum_macros = "0.21"
httparse = "1.4"
thiserror = "1.0"
http = "0.2"
url = "2"
percent-encoding = "2"
itertools = "0.10"

# Optional
reqwest = { version = "0.11", optional = true, default-features = false, features = ["json"] }
hyper = { version = "0.14", optional = true }

[features]
default = []
