[package]
name = "mojaloop-api"
version = "0.1.0"
authors = ["msk- <mattkingston@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# fspiox-api = { path = "/home/msk/projects/github.com/msk-/fspiox-api/" }
fspiox-api = { git = "https://github.com/partiallyordered/fspiox-api", rev = "35ff7e7e9af199c0d795a6b68546eb2803cb1aa3" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
derive_more = "0.99"
serde_with = { version = "1.9", features = ["json"] }
strum = "0.21"
strum_macros = "0.21"
httparse = "1.4"
thiserror = "1.0"
http = "0.2"
url = "2"
percent-encoding = "2"
itertools = "0.10"
arrayvec = { version = "0.7.1", features = ["serde"] }

# Optional
reqwest = { version = "0.11", optional = true, default-features = false, features = ["json"] }
hyper = { version = "0.14", optional = true }
ts-rs = { git = "https://github.com/Aleph-Alpha/ts-rs", rev = "ddd461522591a90b987b22dd05e06cfccbea6f5a", optional = true }
tokio = { version = "1.6.1", features = ["full"], optional = true }
kube = { git = "https://github.com/kazk/kube-rs", rev = "aa58c61612b8e8721779986d511549ca6b5991c4", features = ["ws"], optional = true }
kube-runtime = { version = "0.60.0", optional = true }
k8s-openapi = { version = "0.13.0", default-features = false, features = ["v1_21"], optional = true }

[features]
default = []
typescript_types = ["ts-rs", "fspiox-api/typescript_types"]
clients = ["hyper", "fspiox-api/clients"]
clients-kube = ["clients", "fspiox-api/clients-kube", "tokio", "k8s-openapi", "kube"]
